--- a/app/assets/stylesheets/jquery.pageslide.css
+++ b/app/assets/stylesheets/jquery.pageslide.css
@@ -19,8 +19,9 @@
     display: none;
     color: #EFEFEF;
     background-color: rgba(0,0,0,1);
+    overflow: scroll;
 }
-
+/*
 .open {
     display: none;
     float: left;
@@ -35,5 +36,5 @@
     text-indent: -999999px;
     border: 0;
 }
-
+*/
 
